--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: subdir/package.json
+        cache-dependency-path: '**/package-lock.json' # THIS PATTERN did the trick for me.
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
